@@ -69,7 +69,7 @@
 	</castle>
 
 	<system.web>
-		<compilation defaultLanguage="C#" />
+		<compilation defaultLanguage="C#" debug="true" />
 
 		<httpHandlers>
 			<add verb="*" path="*.rails" 
